--- a/todo-android/app/build.gradle
+++ b/todo-android/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "com.realtime.todo"
         minSdkVersion 13
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,7 +21,6 @@ android {
 }
 
 dependencies {
-    compile files('libs/realtime-cloud-storage-1.0.10.jar')
-    compile 'com.android.support:support-v4:21.0.2'
-    compile 'com.android.support:support-v13:21.0.2'
+    compile 'com.android.support:support-v13:23.4.0'
+    compile 'co.realtime:storage-android:1.2.2'
 }
